# aq_frontiercode

./: .gitattributes  .gitignore  FrontierCode Sample - Potential Tasks.csv  README.md  frontier_code_harbor_harness.md  project_silver_repos  pyproject.toml
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/: .gitignore  CMakeLists.txt  DEVNOTES.md  README.md
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/environment/: Dockerfile
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/include/pulse/: pulse.hpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/aggregator/: aggregator.cpp  count_min_sketch.cpp  histogram.cpp  hyperloglog.cpp  percentile.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/buffer/: ring_buffer.cpp  spsc_queue.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/codec/: crc32.cpp  csv.cpp  decoder.cpp  encoder.cpp  json.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/core/: event.cpp  metrics.cpp  schema.cpp  types.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/filter/: bloom_filter.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/pattern/: nfa_engine.cpp  pattern_matcher.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/pipeline/: pipeline.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/router/: content_router.cpp  topic_router.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/state/: state_store.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/timer/: timer_wheel.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/src/window/: session_window.cpp  sliding_window.cpp  tumbling_window.cpp
examples/frontiercode_pulseengine_decoder_bounds/tests/hidden/base_repo/tests/: test_advanced_operators.cpp  test_aggregator.cpp  test_backpressure.cpp  test_batch_operator.cpp  test_bloom_filter.cpp  test_circuit_breaker.cpp  test_codec.cpp  test_content_router.cpp  test_count_min_sketch.cpp  test_count_window.cpp  test_crc32.cpp  test_csv.cpp  test_ema.cpp  test_event.cpp  test_event_batch.cpp  test_framework.hpp  test_global_window.cpp  test_histogram.cpp  test_hyperloglog.cpp  test_integration.cpp  test_json.cpp  test_lru_cache.cpp  test_map_state.cpp  test_metrics.cpp  test_pattern.cpp  test_percentile.cpp  test_pipeline.cpp  test_rate_limiter.cpp  test_retry_policy.cpp  test_ring_buffer.cpp  test_sampling_filter.cpp  test_schema.cpp  test_session_window.cpp  test_sliding_count_window.cpp  test_sliding_window.cpp  test_spsc_queue.cpp  test_state_store.cpp  test_timer_wheel.cpp  test_top_k.cpp  test_topic_router.cpp  (+2 more)
generated_tasks/bulwark__71c6154c597e/tests/hidden/base_repo/: .gitignore  Dockerfile  Makefile  NOTES.md  README.md  pyproject.toml
generated_tasks/bulwark__71c6154c597e/tests/hidden/base_repo/src/bulwark/: ast_nodes.py  bytecode.py  cli.py  disasm.py  engine.py  formatter.py  parser.py  semcheck.py  span.py  verdict.py
generated_tasks/bulwark__71c6154c597e/tests/hidden/base_repo/tests/: conftest.py  test_cli.py  test_engine.py  test_formatter.py  test_lexer.py  test_parser.py  test_semcheck.py  test_span.py  test_wire.py
generated_tasks/cryograph__katz-propagation-direction/environment/repo/: CMakeLists.txt  DEVNOTES.md
generated_tasks/cryograph__katz-propagation-direction/environment/repo/src/core/: types.hpp
generated_tasks/cryograph__katz-propagation-direction/environment/repo/src/generator/: generator.cpp
generated_tasks/cryograph__katz-propagation-direction/environment/repo/src/metrics/: metrics.cpp
generated_tasks/cryograph__katz-propagation-direction/environment/repo/src/query/: query.hpp
generated_tasks/in_dist/vaultkey__7cc2bdf265bf/environment/repo/: README.md  pyproject.toml
generated_tasks/in_dist/vaultkey__7cc2bdf265bf/environment/repo/tests/: test_crypto.py  test_utils.py  test_vault.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/: .pre-commit-config.yaml  pyproject.toml
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/.github/: PULL_REQUEST_TEMPLATE.md
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/.github/ISSUE_TEMPLATE/: bug_report.md
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/app/api/: responses.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/app/cache/: backend.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/app/models/: chunk.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/app/observability/: tracing.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/app/rag/: pipeline.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/app/repositories/: api_key.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/app/services/: search.py
generated_tasks/in_progress/fastapi-rag-gateway__bm25-common-term-idf/environment/repo/tests/integration/: test_api.py
generated_tasks/in_progress/nexusflow__77dc75b/environment/repo/: pyproject.toml
generated_tasks/in_progress/nexusflow__77dc75b/environment/repo/nexusflow/: app.py
generated_tasks/in_progress/nexusflow__77dc75b/environment/repo/nexusflow/auth/: permissions.py
generated_tasks/queryweave__838743095c6a/tests/hidden/base_repo/: pyproject.toml
generated_tasks/timewindow-lib__9e26d29b51b0/tests/hidden/base_repo/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
generated_tasks/timewindow-lib__9e26d29b51b0/tests/hidden/base_repo/docs/: notes.md
generated_tasks/timewindow-lib__9e26d29b51b0/tests/hidden/base_repo/timewindow/: __init__.py
(+59220 files in other folders)
