[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bulwark"
version = "0.1.0"
description = "A small HTTP filtering reverse-proxy with a typed rule DSL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mdhingra" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "h11>=0.14,<0.15",
    "anyio>=4.4,<5",
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<3",
    "structlog>=24,<25",
    "typer>=0.12,<0.13",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "hypothesis>=6.100",
]
server = [
    "uvicorn[standard]>=0.30,<0.31",
    "starlette>=0.38,<0.39",
]

[project.scripts]
bulwark = "bulwark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bulwark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
# Enabled when pytest-asyncio is installed (see [project.optional-dependencies].dev).
# asyncio_mode = "auto"
