[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-rag-gateway"
version = "1.0.0"
description = "Production-grade Retrieval-Augmented Generation gateway built on FastAPI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Devaansh Kathuria", email = "devaanshkathuria@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.31",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.4",
    "mypy>=1.10",
]

[project.scripts]
rag-gateway = "app.cli.main:run"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "build",
    "dist",
    ".venv",
    "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = [
    "E501",
    "E731",
    "B007",
    "B008",
    "B904",
    "B905",
    "N802",
    "N805",
    "N818",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N802", "N803", "N806"]
"app/cli/commands/*" = ["A001"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests",
    "alembic/versions",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
    "e2e: end-to-end smoke tests against a running app",
    "slow: long-running tests that should be opt-in",
]
