[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nexusflow"
version = "0.9.3"
description = "A modular Python API platform with auth, events, plugins, and background tasks"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nikhil Mishra", email = "nikhilmishra398@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusflow*"]
