[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "timewindow"
version = "0.1.1"
description = "UTC datetime alignment to fixed-width time buckets"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Rey Anthony", email = "reyanthony062001@gmail.com" }]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["timewindow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
